--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/runtime": "^7.21.0",
     "cypress": "^12.9.0"
   }
 }
