--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rancid-tomatillos",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Kanderson58.github.io/rancid-tomatillos",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "cypress": "cypress open"
   },
@@ -41,6 +44,7 @@
     "@babel/plugin-transform-runtime": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/runtime": "^7.21.0",
-    "cypress": "^12.9.0"
+    "cypress": "^12.9.0",
+    "gh-pages": "^5.0.0"
   }
 }
